<resources>
    <string name="app_name">Bible Verse Memorizer</string>

    <string name="title_view_all_verses">View All Verses</string>
    <string name="title_random_verse">Random Verse</string>
    <string name="title_add_verse">Add Verse</string>
    <string name="title_edit_verse">Edit Verse</string>

    <string name="action_settings">Settings</string>
    <string name="string_placeholder">PLACEHOLDER</string>

    <string name="verse_reference">Verse Reference</string>
    <string name="verse_content">Verse Content</string>
    <string name="verse_submit">Save</string>

    <string name="view_all_verses">View All</string>
    <string name="random_verse">Random</string>
    <string name="add_verse">Add Verse</string>

</resources>
