<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.taylor_pc.bibleversememorizer.MainActivity"
    tools:showIn="@layout/activity_main">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <Button
            android:id="@+id/view_all_verses"
            style="@style/MenuButtons"
            android:layout_height="wrap_content"
            android:text="@string/view_all_verses" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:gravity="center">

        <Button
            android:id="@+id/random_verse"
            style="@style/MenuButtons"
            android:layout_height="wrap_content"
            android:text="@string/random_verse"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:gravity="center">

        <Button
            android:id="@+id/add_verse"
            style="@style/MenuButtons"
            android:layout_height="wrap_content"
            android:text="@string/add_verse"/>

    </TableRow>

</TableLayout>
