<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.taylor_pc.bibleversememorizer.EditBibleVerse">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent" >

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="@color/colorToolbar"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/title_edit_verse" />

        </TableRow>

        <TableRow
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="100"
            android:gravity="center_horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="50">

                <EditText
                    android:id="@+id/input_verse_reference"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/verse_reference" />

            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="100"
            android:gravity="center_horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="50">

                <EditText
                    android:id="@+id/input_verse_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/verse_content" />

            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="100"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btn_update_verse"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/verse_submit" />

        </TableRow>

    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btn_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"

            android:layout_marginLeft="20dp"
            android:clickable="true"
            app:backgroundTint="@color/colorToolbar"
            app:fabSize="normal"
            app:srcCompat="@android:drawable/ic_menu_revert" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
